--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 install:
     - pip install python-crfsuite flake8
+    - pip install coveralls
 script:
     - flake8 indicNLP
-    - python indicNLP
+    - coverage run --source=indicNLP indicNLP
+after_success:
+  coveralls
